# NFLGSPLAT

./: .gitignore  INSTRUCTIONS.md  README.md  SETUP.md  pyproject.toml
configs/: avatar.yaml  field_recon.yaml  identity.yaml  pipeline.yaml  season.yaml  smplx_fit.yaml
envs/: environment_avatar.yml  environment_gsplat.yml  environment_lhm.yml  environment_smplx.yml
nfl_gsplat/: __init__.py  cli.py  config.py  errors.py  paths.py
scripts/: 00_setup_environments.sh  01_download_models.sh  02_autocalibrate.py  02_calibrate_cameras.py  02b_track_calibration.py  03_reconstruct_field.sh  04_process_play.sh  05_render_novel_view.py  build_assets.py  check_labels.py  diag_calib.py  eval_pretrained_keypoints.py  fetch_roster.py  label_landmarks.py  new_play.py  run_season.py  train_landmarks.sbatch
tests/: conftest.py  test_adapters.py  test_assets_and_ball_io.py  test_assign_stage.py  test_avatar_library.py  test_avatar_resolve.py  test_avatars.py  test_ball.py  test_ball_asset.py  test_betas_freeze.py  test_calibration.py  test_camera_track.py  test_collect_uids.py  test_config_paths.py  test_decompose_homography.py  test_discover.py  test_field.py  test_field_detect.py  test_field_features.py  test_field_homography.py  test_field_identify.py  test_forward_kinematics.py  test_identity_registry.py  test_keyframes.py  test_label_export.py  test_landmark_dataset.py  test_landmark_heatmap.py  test_landmark_infer.py  test_landmark_model.py  test_landmark_schema.py  test_landmark_train_smoke.py  test_meta.py  test_new_play.py  test_percam_threading.py  test_pipeline_smoke.py  (+14 more)
(+100 files in other folders)
