[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "nfl_gsplat"
version = "0.1.0"
description = "NFL broadcast -> free-viewpoint Gaussian Splatting pipeline"
requires-python = ">=3.10"
readme = "README.md"
dependencies = [
    "numpy>=1.24",
    "scipy>=1.10",
    "omegaconf>=2.3",
    "typer>=0.12",
    "rich>=13.0",
    "opencv-python>=4.8",
    "pandas>=2.0",
    "pyarrow>=14.0",
    "plyfile>=1.0",
    "imageio>=2.34",
    "imageio-ffmpeg>=0.5",
]

[project.optional-dependencies]
test = ["pytest>=8.0", "pytest-xdist>=3.5"]

[tool.setuptools.packages.find]
include = ["nfl_gsplat*"]
exclude = ["tests*", "scripts*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "gpu: requires a CUDA-capable GPU",
    "slow: takes more than ~10 seconds",
    "smoke: full end-to-end pipeline on synthetic fixtures",
    "real_video: requires real broadcast video + body models + annotations",
]
addopts = "-ra --strict-markers"

[tool.ruff]
line-length = 110
target-version = "py310"

[tool.ruff.lint]
# E702 (multi-statement-on-one-line semicolon) is intentional for tight numpy
# array initializers and test scaffolding. Keep the rest of E + F.
ignore = ["E702"]
